manifests/secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shsingh-3
kind: Secret
apiVersion: v1
metadata:
  name: shsingh-3-truststore
data:
  truststore.jks: MIIMMgIBAzCCC9wGCSqGSIb3DQEHAaCCC80EggvJMIILxTCCC8EGCSqGSIb3DQEHBqCCC7IwgguuAgEAMIILpwYJKoZIhvcNAQcBMGYGCSqGSIb3DQEFDTBZMDgGCSqGSIb3DQEFDDArBBSxszHcME/P3sC5k+J8awG3My9XCAICJxACASAwDAYIKoZIhvcNAgkFADAdBglghkgBZQMEASoEEPXcq1Jn7Fn3zirEYarTkLOAggswvrWAhBLLr0Fz9/kAYvulfjSK/bA73v05J0DHnsKEkKQqCKnh61Q1tH/pH3SvzCLS4jSGXgK2Q5kjkxkPDj+qzBs35W+nbwmHeJcuXkYWrVY4yeeSiPRM6b5edhv/cWtsDI+Ixit4XCfuF5qgtv0eowKhRAR0p0UZOtog6vFLLAal1iRivfZmSA4LQNtNn3BPc8//N2UhLf2GigmsEGNMsnhAc2ZRi7gN9Cxgs3WqqXHTzV [...]
type: Opaque
