manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: shsingh-3
  labels:
    app.kubernetes.io/instance: cicd-config
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: shsingh-3
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
